Storable hooks.  This should fix RT ticket #5542, reported by Dan
Rowles (I hope).

- More docs on how date math is done.  See the new section "The
Results of Date Math".

[ BUG FIXES ]

- DateTime::Duration's is_positive, is_zero, and is_negative methods
could incorrectly return true if a duration contained mixed positive
and negative units.


0.20  2004-02-12

[ IMPROVEMENTS ]

- Tweaked the "How Date Math is Done" section in DateTime.pm to
provide some more explicit examples.

[ BUG FIXES ]

- If seconds are not negative, DateTime::Duration will try to keep
nanoseconds >= 0 when normalizing them to seconds, as long as this
doesn't make seconds become negative.  Suggested by Andrew Pimlott.

- In the datetime subtraction code, there was an off-by-one error in
the code to determine if one of the datetimes occurred in a minute
containing a leap second.  This led to the result of the subtraction
being off by one second.  Patch by Andrew Pimlott.

- A duration's nanoseconds weren't normalized after multiplication.
Patch by Andrew Pimlott.


0.1901  2004-01-07  (the "people care about ancient history?" release)

[ BUG FIXES ]

- The day of week was totally busted for dates before 0000-12-25.
Reported by Flavio Glock.


0.19  2003-12-01  (the "never look before a leap second" release)

[ IMPROVEMENTS ]

- DateTime::Duration now provides a compare() class method.

- DateTime::Duration now overloads comparison to throw an exception,
because comparison requires a base DateTime object.  Note that
previous versions of DateTime::Duration _did not_ overload comparison,
so if you were comparing them, you were just comparing the value of
the object references.  Thanks to Rick Measham, Jon Swartz, and Max
Maischein for contributing to the discussion on datetime@perl.org
about how to implement this feature.

- Added DateTime::Duration->multiply to complement multiplication
overloading.

- Added a leap_seconds method.

- Added a section to the docs about floating datetimes.
