@@ -31,6 +31,9 @@ Results of Date Math".
 could incorrectly return true if a duration contained mixed positive
 and negative units.
 
+- Better normalization of nanoseconds in DateTime::Duration.  Patch by
+Andrew Pimlott.
+
 
 0.20  2004-02-12
 
